feat: implement argument parser and tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_library(
   tangle
   journal.cpp
+  argument_parser.cpp
   include/journal.h
+  include/argument_parser.h
 )
 
 target_compile_features(tangle PUBLIC cxx_std_20)
